:pencil2: Added generateId()

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <body>
     <div class="container">
       <h3>Who's that Pokémon?</h3>
-      <div id="sprite" class="card">
-        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/443.png">
+      <div class="card">
+        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/443.png" id="sprite">
       </div>
-      <div id="name" class="name">Gible</div>
+      <div id="name" class="name">gible</div>
       <button id="pokemonBtn" class="btn">Generate Another Pokémon</button>
     </div>
 
