--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <div class="container">
       <h3>Who's that Pokémon?</h3>
       <div class="card">
-        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/443.png" id="sprite">
+        <img
+          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/443.png"
+          id="sprite"
+        />
       </div>
       <div id="name" class="name">gible</div>
       <button id="pokemonBtn" class="btn">Generate Another Pokémon</button>
