Added pokemon type

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
       <h3>Who's that Pokémon?</h3>
       <div class="card">
         <img
-          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/443.png"
+          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/443.png"
           id="sprite"
         />
       </div>
       <div id="name" class="name">gible</div>
+      <div id="type" class="type">dragon</div>
       <button id="pokemonBtn" class="btn">Generate Another Pokémon</button>
     </div>
 
